added main elements

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/js.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>E-commerce</title>
 </head>
 <body>
     <header>
         <div class="upper">
             <div class="logo">
-                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
 
             <div class="other">
-                <a href="#"><i class="fa-brands fa-cart-shopping"></i></a>
-                <a href="#"><i class="fa-brands fa-cart-shopping"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
             </div>
         </div>
 
@@ -31,7 +36,30 @@
     </header>
 
     <main>
+        <div class="slide">
+            <div class="carousel owl-theme">
+                <div class="content">
+                    <div class="detail">
+                       <h2>Product Name</h2>
+                       <p>Description of the product.</p>
+                       <button>Shop now</button>
+                    </div>
+                    <div class="img">
+                        <img src="assets/img/im1.png" >
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </main>
+
+    <footer>
+        <h2>Test</h2>
+
+    </footer>
+
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
